--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     .copy { background-color: #6c757d; }
     .dev { background-color: #28a745; }
     .prod { background-color: #007bff; }
+    .clear { background-color: #dc3545; }
     #status { margin-top: 20px; font-weight: bold; }
   </style>
 </head>
@@ -45,6 +46,7 @@
   <button class="copy" id="btn-copy">Copy JWT</button>
   <button class="dev" id="btn-dev">Dev OneLink</button>
   <button class="prod" id="btn-prod">Prod OneLink</button>
+  <button class="clear" id="btn-clear">Clear Clipboard</button>
 
   <div id="status"></div>
 
@@ -61,7 +63,6 @@
         status.textContent = "❗ Please enter JWT before copying";
         return;
       }
-
       try {
         await navigator.clipboard.writeText(jwt);
         status.textContent = "✅ JWT copied to clipboard";
@@ -77,7 +78,6 @@
         status.textContent = "❗ Please enter JWT before redirecting";
         return;
       }
-
       try {
         await navigator.clipboard.writeText(jwt);
         status.textContent = "✅ JWT copied, redirecting...";
@@ -88,9 +88,20 @@
       }
     }
 
+    async function clearClipboard() {
+      try {
+        await navigator.clipboard.writeText('');
+        status.textContent = "🧹 Clipboard cleared";
+      } catch (e) {
+        status.textContent = "❌ Clearing clipboard failed";
+        console.error(e);
+      }
+    }
+
     document.getElementById("btn-copy").onclick = () => copyJwtOnly();
     document.getElementById("btn-dev").onclick = () => copyJwtAndRedirect(oneLinkDev);
     document.getElementById("btn-prod").onclick = () => copyJwtAndRedirect(oneLinkProd);
+    document.getElementById("btn-clear").onclick = () => clearClipboard();
   </script>
 </body>
 </html>
