--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   <div id="status"></div>
 
   <script>
-    const oneLinkDev = "https://yourapp.onelink.me/dev";   // ← replace with your dev link
-    const oneLinkProd = "https://yourapp.onelink.me/prod"; // ← replace with your prod link
+    const oneLinkDev = "https://epica-beauty-dev.onelink.me/ZdId/wbih7cek";
+    const oneLinkProd = "https://epica-beauty.onelink.me/ScfO/8vkz4ouc";
 
     const status = document.getElementById("status");
     const jwtInput = document.getElementById("jwt-input");
