--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <script>
     const oneLinkDev_short = "https://epica-beauty-dev.onelink.me/ZdId/wbih7cek";
-    const oneLinkDev = "https://epica-beauty-dev.onelink.me/ZdId?af_ios_url=https%3A%2F%2Ftestflight.apple.com%2Fjoin%2FekcQ28HQ&af_xp=social&pid=onelinkmeta&c=EpicaDev_Pre-landing_Meta&af_dp=apicabeautyapp-dev%3A%2F%2F&deep_link_value=direct_asquizition&af_ad=test_af_ad&af_adset=test_af_adset&af_channel=test_af_channel&fbc=test_fbc&fbp=test_fbp"
+    const oneLinkDev = "https://lumiapp.onelink.me/07cB?af_xp=social&pid=Social_facebook&af_dp=lumiapp%3A%2F%2F&c=testing_campaign&af_channel=test%20channel&af_adset=testadset&af_ad=testad&af_sub1=hello123&fbc=testfbc&fbp=testfbp&promo_code=HELLO123"
     const oneLinkProd_short = "https://epica-beauty.onelink.me/ScfO/8vkz4ouc";
 
     const status = document.getElementById("status");
