--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <script>
     const oneLinkDev_short = "https://epica-beauty-dev.onelink.me/ZdId/wbih7cek";
-    const oneLinkDev = "https://epica-beauty-dev.onelink.me/ZdId?af_ios_url=https%3A%2F%2Ftestflight.apple.com%2Fjoin%2FekcQ28HQ&af_xp=social&pid=onelinkmeta&c=EpicaDev_Pre-landing_Meta&af_dp=apicabeautyapp-dev%3A%2F%2F&deep_link_value=direct_asquizition&af_ad=test_af_ad&af_adset=test_af_adset&af_channel=test_af_channel&af_sub1=test_fbp&af_sub2=test_fbc&af_sub3=test_utm_campaign&af_sub4=test_utm_medium&af_sub5=test_utm_content&funnelId=test_funnelId&sourceFunnelId=test_sourceFunnelId&userId=test_userId&fbclid=test_fbclid"
+    const oneLinkDev = "https://epica-beauty-dev.onelink.me/ZdId?af_ios_url=https%3A%2F%2Ftestflight.apple.com%2Fjoin%2FekcQ28HQ&af_xp=social&pid=onelinkmeta&c=EpicaDev_Pre-landing_Meta&af_dp=apicabeautyapp-dev%3A%2F%2F&deep_link_value=direct_asquizition&af_ad=test_af_ad&af_adset=test_af_adset&af_channel=test_af_channel&af_sub1=fbp_af&af_sub2=fbc_af&af_sub3=utm_campaign_af&af_sub4=utm_medium_af&af_sub5=utm_content_af&funnelId=funnelId_af&sourceFunnelId=sourceFunnelId_af&userId=userId_af&fbclid=fbclid_af"
     const oneLinkProd_short = "https://epica-beauty.onelink.me/ScfO/8vkz4ouc";
 
     const status = document.getElementById("status");
