--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <script>
     const oneLinkDev_short = "https://epica-beauty-dev.onelink.me/ZdId/wbih7cek";
-    const oneLinkDev = "https://epica-beauty-dev.onelink.me/ZdId?af_ios_url=https%3A%2F%2Ftestflight.apple.com%2Fjoin%2FekcQ28HQ&af_xp=social&pid=onelinkmeta&c=EpicaDev_Pre-landing_Meta&af_dp=apicabeautyapp-dev%3A%2F%2F&deep_link_value=direct_asquizition&af_ad=test_af_ad&af_adset=test_af_adset&af_channel=test_af_channel&af_sub1=fbp_af&af_sub2=fbc_af&af_sub3=utm_campaign_af&af_sub4=utm_medium_af&af_sub5=utm_content_af&funnelId=funnelId_af&sourceFunnelId=sourceFunnelId_af&userId=a4fb5509-e464-4773-b990-dd35b8daa9af&fbclid=fbclid_af"
+    const oneLinkDev = "https://epica-beauty-dev.onelink.me/ZdId?af_ios_url=https%3A%2F%2Ftestflight.apple.com%2Fjoin%2FekcQ28HQ&af_xp=social&pid=onelinkmeta&c=EpicaDev_Pre-landing_Meta&af_dp=apicabeautyapp-dev%3A%2F%2F&deep_link_value=direct_asquizition&af_ad=test_af_ad&af_adset=test_af_adset&af_channel=test_af_channel&af_sub1=fbp_af&af_sub2=fbc_af&af_sub3=utm_campaign_af&af_sub4=utm_medium_af&af_sub5=utm_content_af&funnelId=funnelId_af&userId=a4fb5509-e464-4773-b990-dd35b8daa9af&fbclid=fbclid_af"
     const oneLinkProd_short = "https://epica-beauty.onelink.me/ScfO/8vkz4ouc";
 
     const status = document.getElementById("status");
